Profiles to compile for java 8 or java 13 environments, and R script variable read from pom. Addition of rest call to get the available metrics.